--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.16",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
